--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,9 +9,9 @@
     tools:context=".SettingsActivity">
 
     <TextView
-        android:id="@id/authorized"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:id="@id/radioButtonMaterialDark"
+        android:layout_width="365dp"
+        android:layout_height="71dp" />
 
     <RadioGroup
         android:id="@+id/radioButtons"
@@ -26,13 +26,13 @@
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/authorized"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Authorize" />
 
         <com.google.android.material.radiobutton.MaterialRadioButton
             android:id="@+id/not_authorized"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/Reject" />
 
